--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.22.4",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
